--- a/src/index.html
+++ b/src/index.html
@@ -272,15 +272,15 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/SiddharthMundra/SpoilerDetector"
+                  href="https://github.com/SiddharthMundra/SpoilerShield"
                 >
-                  Source Code
+                  Read Paper
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://your-live-link.com/spoiler-detector" target="_blank">
+                <a rel="noreferrer" href="https://drive.google.com/file/d/1X81NztwRfwClCkgrcK9Y3t8zylCXeLUS/view?usp=sharing" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
